<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bleu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:src="@drawable/logo_complet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <TextView
        android:id="@+id/login_title"
        style="@style/grand_titre"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="532dp"
        android:text="@string/login_title"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <Button
        android:id="@+id/button_google"
        style="@style/titre_simple_black"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:text="@string/login_button_google"
        android:textAllCaps="false"
        app:cornerRadius="4dp"
        android:drawableStart="@drawable/ic_icone_google"
        android:paddingHorizontal="35dp"
        app:layout_constraintBottom_toBottomOf="@+id/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title"
        app:layout_constraintVertical_bias="0.086" />


    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="330dp"
        android:layout_height="38dp"
        android:background="#25ffffff"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/login_mail_input"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingHorizontal="20dp"
        android:textColorHint="#70ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_google"
        app:layout_constraintVertical_bias="0.089" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="330dp"
        android:layout_height="38dp"
        android:background="#25ffffff"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/login_password_input"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingHorizontal="20dp"
        android:textColorHint="#70ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintVertical_bias="0.078" />

    <Button
        android:id="@+id/button_connexion"
        style="@style/titre_black"
        android:layout_width="330dp"
        android:layout_height="38dp"
        android:drawablePadding="10dp"
        android:paddingHorizontal="48dp"
        android:background="@color/jaune"
        android:text="@string/login_button_connexion"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.284" />

    <TextView
        android:id="@+id/textView2"
        style="@style/mini_text_simple_white"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/login_cgd"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_connexion"
        app:layout_constraintVertical_bias="0.697" />

</androidx.constraintlayout.widget.ConstraintLayout>