<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginProfileActivity">

    <ImageView
        android:id="@id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bleu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView1"
        style="@style/mini_text_simple_white"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/login_cgd"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/textView2"
        style="@style/titre_white"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/login2_mini_title"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        app:layout_constraintVertical_bias="0.087" />

    <ImageView
        android:id="@+id/add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/profile_add_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.059" />


    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="330dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:background="#25ffffff"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/login_mail_input"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingHorizontal="20dp"
        android:textColorHint="#70ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_google" />

    <Button
        android:id="@+id/button_google"
        style="@style/titre_simple_black"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="276dp"
        android:drawableStart="@drawable/ic_camera"
        android:drawablePadding="10dp"
        android:paddingHorizontal="35dp"
        android:text="@string/login_button_upload_photo"
        android:textAllCaps="false"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_connexion"
        style="@style/titre_black"
        android:layout_width="330dp"
        android:layout_height="38dp"
        android:background="@color/jaune"
        android:drawablePadding="10dp"
        android:paddingHorizontal="48dp"
        android:text="@string/login_button_connexion"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTextEmailAddress" />

</androidx.constraintlayout.widget.ConstraintLayout>