<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment"
    android:id="@+id/fragment_home"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/photo_profil" />
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/pview_text_salut"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        app:layout_constraintStart_toEndOf="@id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <TextView
        android:id="@+id/textView"
        style="@style/sub_text_simple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/home_hello"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/pview_text_salut" />

    <TextView
        style="@style/text_simple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_name"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <SearchView
        android:id="@+id/searchbarView"
        android:layout_width="365dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        app:cornerRadius="4dp"
        android:elevation="10dp"
        android:iconifiedByDefault="false"
        android:queryHint="@string/home_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pview_text_salut"/>


    <TextView
        android:id="@+id/textView3"
        style="@style/titre_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/home_list_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchbarView" />

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        android:layout_marginEnd="28dp"
        app:tint="@color/black" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/vertical_recycler_view"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:visibility="visible"
        android:paddingBottom="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:listitem="@layout/item_vertical_list">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>